# granum

./: .gitignore  .mcp.json  CLAUDE.md  RATIONALE.md  README.md  SPEC.md  plugin.json  pyproject.toml  requirements.txt
cli/: main.py
hooks/: granum-coldstart.sh  granum-compact.sh  granum-log.sh  granum-reinject.sh  granum-spec-sync.sh
mcp_server/: db.py  ipc.py  models.py  server.py
