[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "granum"
version = "0.3.1"
description = "Persistent semantic memory with graph relationships for Claude Code"
requires-python = ">=3.9"
dependencies = [
    "kuzu>=0.5.0",
    "sentence-transformers>=2.2.0",
    "mcp>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[tool.setuptools.packages.find]
include = ["cli*", "mcp_server*"]

[project.scripts]
granum = "cli.main:main"
